fixed bugs for recycler view and created detail screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">The Guardian</string>
+    <string name="menu_article_fav">Choose favourite</string>
 </resources>
